[gd_scene load_steps=13 format=2]

[ext_resource path="res://prefabs/player_demo/Player.gd" type="Script" id=1]
[ext_resource path="res://sprites/weapons/plasma.tres" type="SpriteFrames" id=2]
[ext_resource path="res://another_env.tres" type="Environment" id=3]
[ext_resource path="res://prefabs/player_demo/HUD.gd" type="Script" id=4]
[ext_resource path="res://sprites/crosshair.png" type="Texture" id=5]
[ext_resource path="res://sounds/pain.wav" type="AudioStream" id=6]

[sub_resource type="CubeMesh" id=1]
size = Vector3( 1, 4, 1 )

[sub_resource type="CapsuleShape" id=2]
height = 2.0

[sub_resource type="Animation" id=3]
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0.392157 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.392157 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../audio_pain:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=4]
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0.392157 ) ]
}

[sub_resource type="Animation" id=5]
tracks/0/type = "value"
tracks/0/path = NodePath("weapon:position:y")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.7, 0.994985 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 176.0, 352.0, 176.0 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.7 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "update_anim"
} ]
}

[sub_resource type="Animation" id=6]
tracks/0/type = "value"
tracks/0/path = NodePath("weapon:position:y")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 176.0 ]
}

[node name="Player" type="KinematicBody" groups=[
"player",
]]
collision_layer = 5
collision_mask = 5
script = ExtResource( 1 )
fire_rate = 0.2
reload_time = 2

[node name="weapon" type="AnimatedSprite" parent="."]
position = Vector2( 0, 176 )
scale = Vector2( 1, -1 )
frames = ExtResource( 2 )
animation = "reload"
playing = true
centered = false
flip_v = true

[node name="mesh" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 0 )
visible = false
mesh = SubResource( 1 )
material/0 = null

[node name="Camera" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3.4, 0 )
environment = ExtResource( 3 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-008, 1, 0, -1, -4.37114e-008, 0, 2, 0 )
shape = SubResource( 2 )

[node name="GroundRay" type="RayCast" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0 )
enabled = true

[node name="HUD" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )

[node name="VBoxContainer" type="VBoxContainer" parent="HUD"]
visible = false
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -40.0
margin_right = 59.0

[node name="AmmoLabel" type="Label" parent="HUD/VBoxContainer"]
margin_right = 59.0
margin_bottom = 14.0
text = "Ammo: 0"

[node name="maxammolabel" type="Label" parent="HUD/VBoxContainer"]
margin_top = 18.0
margin_right = 59.0
margin_bottom = 32.0
text = "100"

[node name="Tween" type="Tween" parent="HUD/VBoxContainer"]

[node name="crosshair" type="TextureRect" parent="HUD"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -8.0
margin_top = -8.0
margin_right = 8.0
margin_bottom = 8.0
texture = ExtResource( 5 )
stretch_mode = 2

[node name="ColorRect" type="ColorRect" parent="HUD"]
self_modulate = Color( 1, 1, 1, 0.392157 )
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 1, 0, 0, 0 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="HUD"]
autoplay = "normal"
playback_speed = 5.0
anims/dmg = SubResource( 3 )
anims/normal = SubResource( 4 )

[node name="Timer" type="Timer" parent="."]

[node name="timer_reload" type="Timer" parent="."]

[node name="SpotLight" type="SpotLight" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3.4, 0 )
shadow_contact = 13.59
spot_range = 30.0
spot_angle = 50.0

[node name="anim_weapon" type="AnimationPlayer" parent="."]
autoplay = "normal"
playback_speed = 2.0
anims/down = SubResource( 5 )
anims/normal = SubResource( 6 )

[node name="audio_pain" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource( 6 )
[connection signal="s_ammo" from="." to="HUD" method="_on_Player_s_ammo"]
[connection signal="s_reload" from="." to="." method="_on_Player_s_reload"]
[connection signal="animation_finished" from="weapon" to="." method="_on_weapon_animation_finished"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="timer_reload" to="." method="_on_timer_reload_timeout"]
[connection signal="animation_finished" from="anim_weapon" to="." method="_on_anim_weapon_animation_finished"]
